dataset1235/2025-2/1153765216/users/1370515670/executions/2814675586_1630070338.log
== SUBMISSION (2025-08-26 18:45:23)
-- CODE: 
numero = float(input(2.0))
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
2.010.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
2.021.0
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
2.0-200.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
2.024.2
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
2.0-9.0
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
2.04.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:45:07)
-- CODE: 
numero = float(input(2.0))
quadrado = numero * 2
print(int(quadrado))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
2.010
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
2.021
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
2.0-200
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
2.024
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
2.0-9
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
2.04
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:45:09)
-- CODE: 
numero = float(input(2.0))
quadrado = numero * 2
print(int(quadrado))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
2.010
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
2.021
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
2.0-200
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
2.024
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
2.0-9
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
2.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:06:31)
-- CODE: 
numero = float((input(2.0))
quadrado = (numero) * 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
File "XXXX", line 1
    numero = float((input(2.0))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
File "XXXX", line 1
    numero = float((input(2.0))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
File "XXXX", line 1
    numero = float((input(2.0))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
File "XXXX", line 1
    numero = float((input(2.0))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
File "XXXX", line 1
    numero = float((input(2.0))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    numero = float((input(2.0))
                  ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:08:00)
-- CODE: 
numero = float(input())
quadrado = (numero) ** 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
25.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
110.25
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
10000.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
146.41
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
20.25
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:46:44)
-- CODE: 
numero = input(2.0)
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
2.05.05.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
2.010.510.5
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
2.0-100.0-100.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
2.012.112.1
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
2.0-4.5-4.5
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
2.02.02.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:47:29)
-- CODE: 
numero = float(input(2.0))
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
2.010.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
2.021.0
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
2.0-200.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
2.024.2
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
2.0-9.0
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
2.04.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:45:25)
-- CODE: 
numero = float(input(2.0))
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
2.010.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
2.021.0
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
2.0-200.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
2.024.2
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
2.0-9.0
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
2.04.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:47:21)
-- CODE: 
numero = float(input(2.0))
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
2.010.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
2.021.0
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
2.0-200.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
2.024.2
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
2.0-9.0
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
2.04.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:06:31)
-- CODE: 
numero = float((input(2.0))
quadrado = (numero) * 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
File "XXXX", line 1
    numero = float((input(2.0))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
File "XXXX", line 1
    numero = float((input(2.0))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
File "XXXX", line 1
    numero = float((input(2.0))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
File "XXXX", line 1
    numero = float((input(2.0))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
File "XXXX", line 1
    numero = float((input(2.0))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    numero = float((input(2.0))
                  ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
